alignment fix

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     /* Prevents horizontal scrolling */
 }
 
@@ -117,7 +117,7 @@ nav {
 }
 
 .hero {
-    width: 80%;
+    width: 80vw;
     display: flex;
     justify-self: center;
     align-items: center;
@@ -244,8 +244,9 @@ nav {
 
 
 .section-2 img {
-    width: 100vw;
+    width: 100%;
     margin-top: 50px;
+    display: block;
 
 }
 
@@ -880,11 +881,6 @@ nav {
     }
 }
 
-.total-width {
-    width: 80vw;
-    max-width: 1400px;
-
-}
 @media(max-width:768px){
 
 .container{
